unpackaged/main/default/objects/CaseOpsOrder__c/CaseOpsOrder__c.object-meta.xml
<CustomObject>
    <label>CaseOpsOrder</label>
    <nameField>
        <label>CaseOpsOrder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CaseOpsOrders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>