unpackaged/main/default/objects/CaseOpsOrder__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>CaseOpsOrders</relationshipLabel>
    <relationshipName>CaseOpsOrders</relationshipName>
    <type>Lookup</type>
</CustomField>