unpackaged/main/default/objects/CaseOpsOrder__c/fields/CaseOpsOrderKey__c.field-meta.xml
<CustomField>
    <fullName>CaseOpsOrderKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>CaseOpsOrderKey</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>