unpackaged/main/default/objects/CaseOpsOrder__c/fields/Ops_Order__c.field-meta.xml
<CustomField>
    <fullName>Ops_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ops Order</label>
    <referenceTo>Ops_Order__c</referenceTo>
    <relationshipLabel>CaseOpsOrders</relationshipLabel>
    <relationshipName>CaseOpsOrders</relationshipName>
    <type>Lookup</type>
</CustomField>