unpackaged/main/default/objects/CaseOpsOrder__c/fields/Xometry_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Xometry_Order_ID__c</fullName>
    <formula>Ops_Order__r.XometryOpsOrderID__c</formula>
    <label>Order ID</label>
    <type>Text</type>
</CustomField>