unpackaged/main/default/objects/CaseOpsOrder__c/fields/Xometry_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Xometry_Quote_ID__c</fullName>
    <formula>Ops_Order__r.Xometry_Quote_ID__c</formula>
    <label>Quote ID</label>
    <type>Text</type>
</CustomField>